--- a/index.html
+++ b/index.html
@@ -15,17 +15,31 @@
           <h3>Isiaka Lukman Bamidele</h3>
           <p>A web developer</p>
         </div>
-    <div class="feature">
-<a  id="about-button">About</a>
-<a  id="contact-button">Contact</a>
-<a  id="blog-button">Blog</a>
+        <div class="feature">
+          <a id="about-button">About</a>
+          <a id="contact-button">Contact</a>
+          <a id="blog-button">Blog</a>
         </div>
       </div>
 
       <div class="side-two">
         <div class="bio slide current ">
-          <p>Hey there!, My name is Isiaka Lukman Bamidele publicly known as <span class="important"> Colonel Dellyson.</span></p>
-          <p>I am a Web Developer and a Student who loves anything Javascript</p>
+          <blockquote>
+            Hey there!, My name is Isiaka Lukman Bamidele publicly known as
+            <span class="important"> Colonel Dellyson.</span>
+          </blockquote>
+          <p>
+            I am a Web Developer and a Student who loves anything Javascript.
+          </p>
+          <div class="list">
+              <p>I am skilled in the following Technology:</p>
+            <ul class="list-block">
+              <li class="lists">HTML</li>
+              <li class="lists">CSS</li>
+              <li class="lists">JavaScript</li> 
+              <li class="lists">Node.js</li>
+            </ul>
+          </div>
         </div>
         <div class="contact slide ">
           <div class="media-block">
@@ -35,12 +49,17 @@
           </div>
         </div>
         <div class="blog slide ">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, illo? Cumque fugit quidem porro voluptatem, animi iste, consequatur similique ex assumenda eligendi enim officia obcaecati temporibus nesciunt recusandae officiis autem harum rem qui fuga delectus accusantium numquam saepe eaque? Blanditiis, corrupti mollitia. Doloribus </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem,
+            illo? Cumque fugit quidem porro voluptatem, animi iste, consequatur
+            similique ex assumenda eligendi enim officia obcaecati temporibus
+            nesciunt recusandae officiis autem harum rem qui fuga delectus
+            accusantium numquam saepe eaque? Blanditiis, corrupti mollitia.
+            Doloribus
+          </p>
         </div>
       </div>
     </div>
-
-
 
     <script src="./js/main.js"></script>
   </body>
