--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
 
   <body>
@@ -13,12 +14,12 @@
         <div class="pro-img"><img src="./img/pp.jpg" alt="" /></div>
         <div class="pro-info">
           <h3>Isiaka Lukman Bamidele</h3>
-          <p>A web developer</p>
+          <p>A Web Developer</p>
         </div>
         <div class="feature">
-          <a id="about-button">About</a>
-          <a id="contact-button">Contact</a>
-          <a id="blog-button">Blog</a>
+          <a href="#" id="about-button">About Me</a>
+          <a href="#" id="contact-button">My Contact</a>
+          <a href="#" id="blog-button">Projects</a>
         </div>
       </div>
 
@@ -43,9 +44,11 @@
         </div>
         <div class="contact slide ">
           <div class="media-block">
-            <a href="http://github.com">Github::@ColonelDellyson</a>
-            <a href="http://github.com">Twitter::@ColonelDellyson</a>
-            <a href="http://github.com">Facebook::@Isiaka.Lukman.31</a>
+            <a href="https://github.com/DellysonSplendid"> <i class="fab fa-github"></i> </a>
+            <a href="http://github.com"> <i class="fab fa-twitter"></i></a>
+            <a href="http://facebook.com/isiaka.lukman.31"> <i class="fab fa-facebook"></i> </a>
+            <a href="tel+2348103742587"> <i class="fab fa-whatsapp"></i> </a>
+            <a href="http://github.com" title="+2348103742587"> <i class="fab fa-telegram"></i> </a>
           </div>
         </div>
         <div class="blog slide ">
