--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
         </div>
         <div class="blog slide ">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem,
-            illo? Cumque fugit quidem porro voluptatem, animi iste, consequatur
-            similique ex assumenda eligendi enim officia obcaecati temporibus
-            nesciunt recusandae officiis autem harum rem qui fuga delectus
-            accusantium numquam saepe eaque? Blanditiis, corrupti mollitia.
-            Doloribus
+            Ooopsy!!! This page will definitely be included soon. but do not hesitate to check my Github Page to check what I have created @ <a href="https://github.com/DellysonSplendid">Here</a>
           </p>
         </div>
       </div>
