--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -14,7 +19,7 @@
         <div class="pro-img"><img src="./img/pp.jpg" alt="" /></div>
         <div class="pro-info">
           <h3>Isiaka Lukman Bamidele</h3>
-          <p>A Web Developer</p>
+          <p>Web Developer || Student</p>
         </div>
         <div class="feature">
           <a href="#" id="about-button">About Me</a>
@@ -33,27 +38,35 @@
             I am a Web Developer and a Student who loves anything Javascript.
           </p>
           <div class="list">
-              <p>I am skilled in the following Technology:</p>
+            <p>I am skilled in the following Technology:</p>
             <ul class="list-block">
               <li class="lists">HTML</li>
               <li class="lists">CSS</li>
-              <li class="lists">JavaScript</li> 
+              <li class="lists">JavaScript</li>
               <li class="lists">Node.js</li>
             </ul>
           </div>
         </div>
         <div class="contact slide ">
           <div class="media-block">
-            <a href="https://github.com/DellysonSplendid"> <i class="fab fa-github"></i> </a>
+            <a href="https://github.com/DellysonSplendid">
+              <i class="fab fa-github"></i>
+            </a>
             <a href="http://github.com"> <i class="fab fa-twitter"></i></a>
-            <a href="http://facebook.com/isiaka.lukman.31"> <i class="fab fa-facebook"></i> </a>
+            <a href="http://facebook.com/isiaka.lukman.31">
+              <i class="fab fa-facebook"></i>
+            </a>
             <a href="tel+2348103742587"> <i class="fab fa-whatsapp"></i> </a>
-            <a href="http://github.com" title="+2348103742587"> <i class="fab fa-telegram"></i> </a>
+            <a href="http://github.com" title="+2348103742587">
+              <i class="fab fa-telegram"></i>
+            </a>
           </div>
         </div>
         <div class="blog slide ">
           <p>
-            Ooopsy!!! This page will definitely be included soon. but do not hesitate to check my Github Page to check what I have created @ <a href="https://github.com/DellysonSplendid">Here</a>
+            Ooopsy!!! This page will definitely be included soon. but do not
+            hesitate to check my Github Page to check what I have created @
+            <a href="https://github.com/DellysonSplendid">Here</a>
           </p>
         </div>
       </div>
