fixed some errors

--- a/index.html
+++ b/index.html
@@ -14,40 +14,43 @@
   </head>
 
   <body>
-    <div class="container">
+    <div id="app">
       <div class="side-one">
         <div class="pro-img"><img src="./img/pp.jpg" alt="" /></div>
         <div class="pro-info">
           <h3>Isiaka Lukman Bamidele</h3>
-          <p>Web Developer || Student</p>
+          <p>A Student && A Web Developer</p>
         </div>
         <div class="feature">
-          <a href="#" id="about-button">About Me</a>
-          <a href="#" id="contact-button">My Contact</a>
-          <a href="#" id="blog-button">Projects</a>
+          <a href="#" id="about-button" class="btn">About </a>
+          <a href="#" id="contact-button" class="btn"> Contact</a>
+          <a href="#" id="blog-button" class="btn">Projects</a>
         </div>
       </div>
 
       <div class="side-two">
-        <div class="bio slide current ">
-          <blockquote>
-            Hey there!, My name is Isiaka Lukman Bamidele publicly known as
-            <span class="important"> Colonel Dellyson.</span>
-          </blockquote>
+        <div class="bio slide current">
+          <p>
+            Hey there! My name is
+            <span class="emphasis"> Isiaka Lukman Bamidele</span> also known as
+            <span class="emphasis"> Dellyson.</span>
+          </p>
           <p>
             I am a Web Developer and a Student who loves anything Javascript.
           </p>
           <div class="list">
             <p>I am skilled in the following Technology:</p>
             <ul class="list-block">
-              <li class="lists">HTML</li>
-              <li class="lists">CSS</li>
-              <li class="lists">JavaScript</li>
-              <li class="lists">Node.js</li>
+              <li class="lists emphasis">HTML</li>
+              <li class="lists emphasis">CSS</li>
+              <li class="lists emphasis">JavaScript</li>
+              <li class="lists emphasis">Node.js</li>
+              <li class="lists emphasis">Express</li>
+              <li class="lists emphasis">MongoDB</li>
             </ul>
           </div>
         </div>
-        <div class="contact slide ">
+        <div class="contact slide">
           <div class="media-block">
             <a href="https://github.com/DellysonSplendid">
               <i class="fab fa-github"></i>
@@ -61,12 +64,24 @@
               <i class="fab fa-telegram"></i>
             </a>
           </div>
+          <div class="message-box">
+            <h3>You can also drop me a message</h3>
+            <form>
+              <label for="#">Name:</label> <br />
+              <input type="text" /> <br />
+              <label for="#">Email:</label> <br />
+              <input type="text" /> <br />
+              <label for="#">Message:</label> <br />
+              <textarea cols="30" rows="10"></textarea> <br />
+              <button>send</button>
+            </form>
+          </div>
         </div>
-        <div class="blog slide ">
+        <div class="blog slide">
           <p>
             Ooopsy!!! This page will definitely be included soon. but do not
-            hesitate to check my Github Page to check what I have created @
-            <a href="https://github.com/DellysonSplendid">Here</a>
+            hesitate to check my Github Page to see what I have created @
+            <a href="https://github.com/Dellysn">Here</a>
           </p>
         </div>
       </div>
