fixed some typos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <a href="#" id="contact-button" class="btn"> Contact</a>
           <a href="#" id="blog-button" class="btn">Projects</a>
         </div>
+        <div id="name-display"></div>
       </div>
 
       <div class="side-two">
