--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
         </div>
         <div class="contact slide">
           <div class="media-block">
-            <a href="https://github.com/DellysonSplendid">
+            <a target="_blank" href="https://github.com/Dellysn">
               <i class="fab fa-github"></i>
             </a>
-            <a href="http://github.com"> <i class="fab fa-twitter"></i></a>
+            <a href="http://twitter.com/@dellyzon">
+              <i class="fab fa-twitter"></i
+            ></a>
             <a href="http://facebook.com/isiaka.lukman.31">
               <i class="fab fa-facebook"></i>
             </a>
@@ -69,21 +71,80 @@
             <h3>You can also drop me a message</h3>
             <form>
               <label for="#">Name:</label> <br />
-              <input type="text" /> <br />
+              <input readonly="readonly" type="text" /> <br />
               <label for="#">Email:</label> <br />
-              <input type="text" /> <br />
+              <input readonly="readonly" type="text" /> <br />
               <label for="#">Message:</label> <br />
               <textarea cols="30" rows="10"></textarea> <br />
-              <button>send</button>
+              <button disabled="disabled">send</button> <br />
+              <p style="text-align: center; margin-bottom: 0.5rem;">OR</p>
+
+              <label for="email"
+                ><em>isiakalukmandellyson@gmail.com</em>
+              </label>
             </form>
           </div>
         </div>
         <div class="blog slide">
-          <p>
-            Ooopsy!!! This page will definitely be included soon. but do not
-            hesitate to check my Github Page to see what I have created @
-            <a href="https://github.com/Dellysn">Here</a>
-          </p>
+          <div id="project-container">
+            <div class="project-box">
+              <a target="_blank" href="https://citedel.herokuapp.com/">
+                <img src="./img/citedel.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a target="_blank" href="https://dellysn.github.io/cssgenerator/">
+                <img src="./img/csstool.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a target="_blank" href="https://dellysn.github.io/bookmarker/">
+                <img src="./img/bookmarkar.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a
+                target="_blank"
+                href="https://dellysn.github.io/vanilla-movieapp/"
+              >
+                <img src="./img/movieapp.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a
+                target="_blank"
+                href="https://murmuring-sea-75185.herokuapp.com/"
+              >
+                <img src="./img/dash.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a
+                target="_blank"
+                href="https://dellysn.github.io/focus/index.html"
+              >
+                <img src="./img/focus.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a target="_blank" href="https://dellysn.github.io/Kobonest/">
+                <img src="./img/kobonest.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a
+                target="_blank"
+                href="https://penitt.herokuapp.com/users/signin"
+              >
+                <img src="./img/penitt.png" />
+              </a>
+            </div>
+            <div class="project-box">
+              <a target="_blank" href="https://dellysn.github.io/swifthub/">
+                <img src="./img/swifthub.png" />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
